[FIX] Corporation Administration: Missing characters cards and member list status indicating characters not registered in Ledger
